[gd_scene load_steps=6 format=3 uid="uid://dc6a8shgk1mub"]

[ext_resource type="Script" path="res://test_environment_script.gd" id="1_mx3kg"]
[ext_resource type="PackedScene" uid="uid://l5hjt2l7cdv6" path="res://Character/CharacterMain.tscn" id="3_p6nlt"]

[sub_resource type="NavigationMesh" id="NavigationMesh_562mf"]
vertices = PackedVector3Array(-89.5, 0.5, -49.5, -89.5, 0.5, 49.5, 89.5, 0.5, 49.5, 89.5, 0.5, -49.5)
polygons = [PackedInt32Array(3, 2, 0), PackedInt32Array(0, 2, 1)]

[sub_resource type="PlaneMesh" id="PlaneMesh_pelhc"]
size = Vector2(180, 100)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_5g4p5"]
data = PackedVector3Array(52.5, 0, 27.5, -52.5, 0, 27.5, 52.5, 0, -27.5, -52.5, 0, 27.5, -52.5, 0, -27.5, 52.5, 0, -27.5)

[node name="Node3D" type="Node3D"]
script = ExtResource("1_mx3kg")

[node name="NavigationRegion3D" type="NavigationRegion3D" parent="."]
navigation_mesh = SubResource("NavigationMesh_562mf")

[node name="MeshInstance3D" type="MeshInstance3D" parent="NavigationRegion3D"]
mesh = SubResource("PlaneMesh_pelhc")
skeleton = NodePath("../..")

[node name="StaticBody3D" type="StaticBody3D" parent="NavigationRegion3D/MeshInstance3D"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="NavigationRegion3D/MeshInstance3D/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_5g4p5")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 70, 0)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.730222, 0.68321, 0, -0.68321, 0.730222, 0, 38.4652, 0)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Button" type="Button" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 8.0
offset_top = 36.0
offset_right = 72.0
offset_bottom = 67.0
text = "human"

[node name="Button2" type="Button" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 251.0
offset_top = -1.0
offset_right = 291.0
offset_bottom = 30.0
text = "tree"

[node name="Button3" type="Button" parent="CanvasLayer/Control"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
text = "10 gumans"

[node name="Button4" type="Button" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 180.0
offset_top = -1.0
offset_right = 233.0
offset_bottom = 30.0
text = "water"

[node name="Button5" type="Button" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 111.0
offset_top = -1.0
offset_right = 161.0
offset_bottom = 30.0
text = "berry"

[node name="Label" type="Label" parent="CanvasLayer"]
offset_left = 2.0
offset_top = 139.0
offset_right = 42.0
offset_bottom = 162.0

[node name="char" parent="." instance=ExtResource("3_p6nlt")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9.48185, 0, 0)

[connection signal="pressed" from="CanvasLayer/Control/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Button4" to="." method="_on_button_4_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Button5" to="." method="_on_button_5_pressed"]
